<resources>
    <string name="app_name">StudyFlow</string>
    <string name="splash_title">StudyFlow</string>
    <string name="splash_subtitle">Organize seus estudos com facilidade</string>
    <string name="login_title">Entrar</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="nao_tem_conta">Não tem uma conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="register_title">Criar Conta</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="ja_tem_conta">Já tem conta?</string>
    <string name="fazer_login">Fazer login</string>
    <string name="main_title">Minhas Matérias</string>
    <string name="adicionar_materia">Adicionar Matéria</string>
    <string name="add_materia">Adicionar Matéria</string>
    <string name="nome_materia">Nome da matéria</string>
    <string name="descricao_materia">Descrição</string>
    <string name="salvar">Salvar</string>
    <string name="edit_materia">Editar Matéria</string>
    <string name="atualizar">Atualizar</string>
    <string name="excluir">Excluir</string>
    <string name="forgot_password_title">Recuperar Senha</string>
    <string name="forgot_password_link">Esqueceu a senha?</string>
    <string name="reset_password">Redefinir Senha</string>
    <string name="reset_password_title">Redefinir Senha</string>
    <string name="new_password_info">Digite e confirme sua nova senha.</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="confirmar_nova_senha">Confirmar Nova Senha</string>
    <string name="salvar_nova_senha">Salvar Nova Senha</string>
</resources>