<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main"
    android:padding="24dp"
    android:background="@color/blue">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="26sp"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />
    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:background="@color/white"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@color/white"
        android:layout_marginBottom="16dp" />
    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@color/white"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/white"
        android:padding="12dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ja_tem_conta"
        android:textColor="@color/textPrimary"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnFazerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fazer_login"
        android:backgroundTint="@color/blue"
        android:textColor="@color/buttonColor"
        android:layout_marginTop="4dp"/>

</LinearLayout>