<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/blue"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_info"
        android:textColor="@color/textSecondary"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nova_senha"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@color/white"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar_nova_senha"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnSaveNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar_nova_senha"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/white"
        android:padding="12dp"/>
</LinearLayout>