<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:padding="24dp"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_materia"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edtNomeMateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_materia"
        android:background="@color/white"
        android:padding="12dp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/edtDescricaoMateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descricao_materia"
        android:background="@color/white"
        android:padding="12dp"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnSalvarMateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/white"
        android:padding="12dp" />
</LinearLayout>